tests/asm-link/unterminated-if-eof/rgbasm.err
error: unterminated conditional block
   ╭─[ test.asm:1:1 ]
   │
 1 │ if 0
   │ ─┬  
   │  ╰── this `if` is missing a corresponding `endc`
───╯
1 error generated.
